proper directory structure for keeping the chronology

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <nav id="project-miniatures" class="miniatures hidden">
   <a class="miniature"
      href="#xemantic"
-     data-flickity-bg-lazyload="projects/xemantic.com/xemantic.com-miniature.jpg">
+     data-flickity-bg-lazyload="projects/stammtisch/075-03.06.2020/xemantic.com/xemantic.com-miniature.jpg">
     <h2>xemantic.com</h2>
   </a>
 </nav>
@@ -208,7 +208,7 @@
   <div>
     <p>
       <a href="https://creativecode.berlin">Creative Code Berlin</a><br/>
-      Website engine made with &hearts; by <a href="https://xemantic.com">xemantic.com</a>
+      Website engine made with <i class="fas fa-heart"></i> by <a href="https://xemantic.com">xemantic.com</a>
     </p>
   </div>
 </footer>
