new conventions and samarth-optical-illusions project

--- a/index.html
+++ b/index.html
@@ -171,15 +171,41 @@
 </header>
 <nav id="project-miniatures" class="miniatures hidden">
   <a class="miniature"
-     href="#xemantic"
-     data-flickity-bg-lazyload="projects/stammtisch/075-03.06.2020/xemantic.com/xemantic.com-miniature.jpg">
+     href="#_075-samarth-optical-illusions"
+     data-flickity-bg-lazyload="stammtisch/075-03.06.2020/samarth_optical-illusions/illusion-miniature.jpg">
+    <h2>Animated optical illusions</h2>
+  </a>
+  <a class="miniature"
+     href="#_075-kazik-xemantic"
+     data-flickity-bg-lazyload="stammtisch/075-03.06.2020/kazik-xemantic.com/xemantic.com-miniature.jpg">
     <h2>xemantic.com</h2>
   </a>
 </nav>
 <section id="projects" class="hidden">
-  <article id="xemantic">
+  <article id="_075-samarth-optical-illusions">
     <div class="media">
-      <iframe class="iframe" data-src="index.html" loading="lazy"></iframe>
+      <img class="medium" src="stammtisch/075-03.06.2020/samarth_optical-illusions/illusion1.jpg" loading="lazy" />
+      <div class="caption">
+        Optical illusion.
+      </div>
+    </div>
+    <div class="description">
+      <h2>Animated optical illusions</h2>
+      <p class="intro">
+        Samarth presented optical illusions he has animated.
+      </p>
+      <p>
+        See <a href="https://www.instagram.com/samarthishere/"><i class="fab fa-instagram"></i> samarthishere</a>
+      </p>
+      <p>
+        They are known optical illusions, he interpolated the design to reveal the parts that
+        produce the illusion.
+      </p>
+    </div>
+  </article>
+  <article id="_075-kazik-xemantic">
+    <div class="media">
+      <iframe class="iframe" data-src="https://xemantic.com" loading="lazy"></iframe>
       <div class="caption">
         Enjoy this recursive fractal. I <i class="fas fa-heart"></i> going meta. :)
       </div>
