heart fix in footer

--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
       <p>
         See <a href="https://creativecode.berlin">Creative Code Berlin</a>
       </p>
+      <p>
+        <a href="https://github.com/morisil"><i class="fab fa-github"></i> GitHub repository of this project</a>.
+      </p>
     </div>
   </div>
 </section>
