--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     uniform int F;
     uniform sampler2D T0;
 
-    const float SHAPE_FACTOR = .015;
+    const float SHAPE_FACTOR = .013;
     const float SHAPE_ANIMATION_SPEED = 2.0;
-    const float SHAPE_PERIOD_FACTOR = 30.0;
+    const float SHAPE_PERIOD_FACTOR = 40.0;
     const float FADE_FACTOR = .99;
-    const float EXPANSION_FACTOR = .7;
+    const float EXPANSION_FACTOR = 1.1;
 
     // Spectral Colour Scheme By Alan Zucconi www.alanzucconi.com
     float saturate(float x) {
@@ -78,7 +78,7 @@
       float angle = atan(st.x, st.y);
       float dist = length(st)
         + (sin(angle * 5. + iTime * 1.2) + .0) * .05 * sin(iTime * 1.4)
-        + (sin(angle * 9. + iTime * 1.3) + .0) * .03 * sin(iTime * 1.5);
+        + (sin(angle * 7. + iTime * 1.3) + .0) * .03 * sin(iTime * -1.5);
 
       vec3 prevColor = texture2D(iChannel0, uv - expansion).rgb;
       vec3 color = vec3(
@@ -91,7 +91,7 @@
           )
           / 2.
         )
-      ) * SHAPE_FACTOR * spectral_zucconi6(mod(dist - iTime * .1, 1.))
+      ) * SHAPE_FACTOR * spectral_zucconi6(mod(dist - iTime * .3, 1.))
       * step(dist, .9);
       gl_FragColor = vec4(
         prevColor * FADE_FACTOR
@@ -281,7 +281,7 @@
   </article>
   <article id="_075-kazik-xemantic">
     <div class="media">
-      <iframe class="iframe" data-src="https://xemantic.com" loading="lazy"></iframe>
+      <iframe class="iframe" data-src="https://xemantic.com/" loading="lazy"></iframe>
       <div class="caption">
         Enjoy this recursive fractal. I <i class="fas fa-heart"></i> going meta. :)
       </div>
@@ -298,7 +298,7 @@
       <div class="medium vimeo-video" data-video-id="363489966"></div>
     </div>
     <div class="description">
-      <h2>xemantic.com</h2>
+      <h2>Inner Island</h2>
       <p class="intro">
         Check <a href="https://floatingspectrum.com/">Floating Spectrum</a> for details.
       </p>
