--- a/index.html
+++ b/index.html
@@ -242,6 +242,11 @@
 </header>
 <nav id="project-miniatures" class="miniatures hidden">
   <a class="miniature"
+     href="#_075-victor-phonkapp"
+     data-flickity-bg-lazyload="stammtisch/075-03.06.2020/victor-phonkapp/phonk.png">
+    <h2>Phonk</h2>
+  </a>
+  <a class="miniature"
      href="#_075-samarth_optical_illusions"
      data-flickity-bg-lazyload="stammtisch/075-03.06.2020/samarth_optical-illusions/illusion-miniature.jpg">
     <h2>Animated optical illusions</h2>
@@ -258,6 +263,17 @@
   </a>
 </nav>
 <section id="projects" class="hidden">
+  <article id="_075-victor-phonkapp">
+    <div class="media">
+      <img class="medium" src="stammtisch/075-03.06.2020/victor-phonkapp/phonk.png" loading="lazy" />
+    </div>
+    <div class="description">
+      <h2>Phonk app</h2>
+      <p class="intro">
+        Phonk app.
+      </p>
+    </div>
+  </article>
   <article id="_075-samarth_optical_illusions">
     <div class="media">
       <img class="medium" src="stammtisch/075-03.06.2020/samarth_optical-illusions/illusion1.jpg" loading="lazy" />
