font fixed back to Oswald

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <style>
     :root {
       /* changeable variables: start */
-      --font-family: "Arsenal", sans-serif;
+      --font-family: "Oswald", sans-serif;
       --text-color: white;
       --logo-fade-in-duration: 9s;
       --font-size-base: 15px;
@@ -191,7 +191,7 @@
     const MAIN_JS = "https://xemantic.com/main.js";
     const MAIN_CSS = "https://xemantic.com/main.css";
     //const CUSTOM_JS = "custom.js";
-    const FONT_DIST = "https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&display=swap";
+    const FONT_DIST = "https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap";
     const FONT_AWESOME_DIST = "https://kit.fontawesome.com/0bbdfd8b39.js";
     const MAX_SHADOW_DROP = 5.0;
     const MAX_BLUR_RADIUS = .9;
