phonk app update

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
   <a class="miniature"
      href="#_075-victor-phonkapp"
      data-flickity-bg-lazyload="stammtisch/075-03.06.2020/victor-phonkapp/phonk.png">
-    <h2>Phonk</h2>
+    <h2>PHONK</h2>
   </a>
   <a class="miniature"
      href="#_075-samarth_optical_illusions"
@@ -427,7 +427,10 @@
     <div class="description">
       <h2>Phonk app</h2>
       <p class="intro">
-        Phonk app.
+        Self-contained Creative scripting toolbox for new and old Android devices
+      </p>
+      <p>
+        <strong>Website:</strong> <a href="https://phonk.app/">phonk.app</a>
       </p>
     </div>
   </article>
@@ -492,13 +495,13 @@
 </section>
 <footer class="hidden">
   <p>
-    <a href="https://creativecode.berlin">Creative Code Berlin</a><br/>
-    Built with <a href="https://xemantic.github.io/fuck-the-ai-which-is-abusing-your-reptilian-brain-to-make-you-addicted-to-movies-instead-of-art/">
-    Fuck the AI which is abusing your reptilian brain to make you addicted to movies instead of art
-  </a>
+    <a href="https://creativecode.berlin">Creative Code Berlin</a>
   </p>
   <p>
-
+    Built with
+    <a href="https://xemantic.github.io/fuck-the-ai-which-is-abusing-your-reptilian-brain-to-make-you-addicted-to-movies-instead-of-art/">
+      Fuck the AI which is abusing your reptilian brain to make you addicted to movies instead of art
+    </a>
   </p>
 </footer>
 <canvas id="shader-background"></canvas>
